--- a/react-app/src/components/Footer/Footer.module.sass
+++ b/react-app/src/components/Footer/Footer.module.sass
@@ -7,6 +7,8 @@
     display: flex
     justify-content: flex-end
     align-items: center
+    +m
+        justify-content: center
 
 .author
     padding-right: 2rem
@@ -14,6 +16,8 @@
     flex-direction: column
     gap: 10px
     align-items: center
+    +m
+        padding-right: 0
 
 .icons
     display: flex
